changed services pic, added sentance added stuff to footer

--- a/index.html
+++ b/index.html
@@ -145,10 +145,13 @@
   <section>
 
     <h1 id="services" class="py-12 text-3xl text-center text-blue-400 uppercase bg-white">Who We Work With</h1>
-    <div class="px-6 py-20 text-center text-white bg-black sm:px-10">
+    <div class="px-6 pt-10 pb-20 text-center text-white bg-black sm:px-10">
+      <p class="max-w-2xl mx-auto pb-10 text-xl leading-relaxed tracking-wide">We work with all stakeholders involved in the building &
+        construction design process
+      </p>
       <ul class="grid gap-8 md:grid-cols-3">
         <li>
-          <img src="/static/img/services/1.png" class="w-full rounded-md">
+          <img src="/static/img/services/12.jpg" class="w-full rounded-md">
           <h4 class="text-xl text-blue-500 uppercase my-7">Homeowners</h4>
           <p>For clients refurbishing, extending or building from scratch, to provide the clarity and peace of mind they
             desire!</p>
@@ -219,7 +222,7 @@
             <!-- <img class="w-12 h-12 rounded-full"
               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"> -->
             <div>
-              <p>Maya D - Homeowner</p>
+              <p>Sarah - Homeowner</p>
               <br>
               <p>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
@@ -231,7 +234,7 @@
             <!-- <img class="w-12 h-12 rounded-full"
               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"> -->
             <div>
-              <p>Tom cook - Interior Designer</p>
+              <p>Patricia - Interior Designer</p>
               <br>
               <p>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
@@ -244,7 +247,7 @@
             <!-- <img class="w-12 h-12 rounded-full"
               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"> -->
             <div>
-              <p>Barry - Terminus Developments</p>
+              <p>Barry - Developer</p>
               <br>
               <p>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
@@ -268,7 +271,7 @@
             <!-- <img class="w-12 h-12 rounded-full"
               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"> -->
             <div>
-              <p>Gillian McHews - Architect</p>
+              <p>Gillian - Architect</p>
               <br>
               <p>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
@@ -280,7 +283,7 @@
             <!-- <img class="w-12 h-12 rounded-full"
               src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"> -->
             <div>
-              <p>Rachel F - Designer</p>
+              <p>Rachel - Designer</p>
               <br>
               <p>⭐️⭐️⭐️⭐️⭐️</p>
             </div>
@@ -337,8 +340,8 @@
     </div>
 
     <footer class="flex items-center justify-between px-12 py-12 text-gray-300 bg-black">
-      <p>&copy; 2021 by Precise Plans</p>
-      <p class="flex items-center space-x-2"><span class="invisible md:visible">Powered by </span><a href="https://www.softwarebuild.co.uk" target="_blank"><img
+      <p class="">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)<br>Office: 2 Woodlands, Golders Green, <br>London, NW11 9QL</p>
+      <p class="flex items-center space-x-2 hidden md:block"><span class="pb-4 text-sm">Powered by </span><a href="https://www.softwarebuild.co.uk" target="_blank"><img
           src="https://www.softwarebuild.co.uk/img/SVGLogo.svg" alt="Software Build" class="w-24"></a></p>
     </footer>
   </section>
