removed comma from footer

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     </div>
 
     <footer class="flex items-center justify-between px-12 py-12 text-gray-300 bg-black">
-      <p class="">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)<br>Office: 2 Woodlands, Golders Green, <br>London, NW11 9QL</p>
+      <p class="">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)<br>Office: 2 Woodlands, Golders Green <br>London, NW11 9QL</p>
       <p class="flex items-center space-x-2 hidden md:block"><span class="pb-4 text-sm">Powered by </span><a href="https://www.softwarebuild.co.uk" target="_blank"><img
           src="https://www.softwarebuild.co.uk/img/SVGLogo.svg" alt="Software Build" class="w-24"></a></p>
     </footer>
