--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/app.css">
 
   <script src="/static/app.js"></script>
+  <link rel="icon" href="favicon.png" type="image">
   <title>Precise Plans</title>
 </head>
 
@@ -127,7 +128,7 @@
           <ul>
             <li>Imagine seeing the layout of
               your room filled with real furniture</li>
-            <li>Allowing you to make informed decisions with 20:20 vision from a foresight vantage point and create your
+            <li>allowing you to make informed decisions with 20:20 vision from a foresight vantage point and create your
               reality before a tool has been lifted.</li>
           </ul>
           <p>
