--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/app.css">
 
   <script src="/static/app.js"></script>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="icon" href="favicon.png" type="image">
   <title>Precise Plans</title>
 </head>
