--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="px-8 pt-10 pb-20 bg-gray-100 md:pb-10">
         <div class="max-w-xl mx-auto">
           <h4 class="text-xl uppercase">We'd like to hear from you...</h4>
-          <h5 class="text-lg py-10 md:py-5 lg:py-10">E: info@preciseplans.co.uk<br>T: 020 3876 8787 </h5>
+          <h5 class="text-lg py-10 md:py-5 lg:py-10">E: info@preciseplans.co.uk<br>T: 020 3876 8787 <br>A: 7 Whitefriars Trading Estate, Tudor Road, HA3 5QB </h5>
           <form netlify name="contact" class="grid grid-cols-2 gap-6 mt-6">
             <div>
               <label for="first_name" class="form-label">First Name</label>
@@ -352,7 +352,7 @@
         </a>
       </div>
 
-      <p class="lg:order-first lg:w-1/3">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)<br>A: 7 Whitefriars Trading Estate <br>Tudor Road, HA3 5QB</p>
+      <p class="lg:order-first lg:w-1/3">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)</p>
 
       <div class="flex justify-center items-center pt-5 space-x-2 lg:w-1/3 md:pt-0 lg:justify-end">
         <p><span class="hidden pb-4 text-sm md:block">Powered by </span><a href="https://www.softwarebuild.co.uk" target="_blank"><img
