--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </a>
       </div>
 
-      <p class="lg:order-first lg:w-1/3">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)</p>
+      <p class="text-center md:text-left lg:order-first lg:w-1/3">&copy; 2021 by Precise Plans<br>Trading as Taryag LTD (Reg Number: 12587579)</p>
 
       <div class="flex justify-center items-center pt-5 space-x-2 lg:w-1/3 md:pt-0 lg:justify-end">
         <p><span class="hidden pb-4 text-sm md:block">Powered by </span><a href="https://www.softwarebuild.co.uk" target="_blank"><img
