--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </li>
         <li>
           <img src="/static/img/services/designer.jpeg" class="w-full rounded-md">
-          <h4 class="text-xl text-blue-500 uppercase my-7">Proffessionals</h4>
+          <h4 class="text-xl text-blue-500 uppercase my-7">professional</h4>
           <p>For interior designers, architects, builders and developers to tangibly showcase and demonstrate their
             work!</p>
         </li>
