added virtual walkthrough section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,42 @@
   </div>
   </section>
 
+  
+  <!-- Walkthrough -->
+  <section>
+
+    <h1 id="services" class="py-12 text-3xl text-center text-blue-400 uppercase bg-white">Virtual Walkthrough</h1>
+    <div class="px-6 pt-10 pb-20 text-center text-white bg-black sm:px-10">
+      <p class=" mx-auto pb-10 text-xl leading-relaxed tracking-wide">
+        <span class="text-xl text-blue-400">Take it one step further by converting your floor plans to 3D
+        </span>
+      </p> 
+       <ul class="grid gap-8 md:grid-cols-3">
+        <li>
+          <img src="/static/img/AR_bathroom.jpeg" class="w-full rounded-md">
+          <h4 class="text-xl text-blue-500 uppercase my-7"></h4>
+          <p></p>
+        </li>
+        <li>
+          <img src="/static/img/AR_dining.jpeg" class="w-full rounded-md">
+          <h4 class="text-xl text-blue-500 uppercase my-7"></h4>
+          <p></p>
+        </li>
+        <li>
+          <img src="/static/img/AR_kitchen_island.jpeg" class="w-full rounded-md">
+          <h4 class="text-xl text-blue-500 uppercase my-7"></h4>
+          <p></p>
+        </li>
+      </ul>
+      
+      <p class="max-w-5xl mx-auto text-lg"> you can walk through your kitchen, bedrooms, bathrooms, garage, 
+        every single inch of the home is accessible to you and all in 3D
+        This takes the guess work out as you experience your home to understand not only the size & scale of the build but also how you can 
+        visualise your interior design
+      </p>
+    </div>
+  </section>
+
   <!-- Reviews -->
   <section id="reviews" class="py-12 text-white bg-blue-400 splide">
 
