updated text to virtual walkthrough

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
     <h1 id="services" class="py-12 text-3xl text-center text-blue-400 uppercase bg-white">Virtual Walkthrough</h1>
     <div class="px-6 pt-10 pb-20 text-center text-white bg-black sm:px-10">
       <p class=" mx-auto pb-10 text-xl leading-relaxed tracking-wide">
-        <span class="text-xl text-blue-400">Take it one step further by converting your floor plans to 3D
+        <span class="text-xl text-blue-400"> Enhance the experience by taking a virtual stroll through your home.
+ 
         </span>
       </p> 
        <ul class="grid gap-8 md:grid-cols-3">
@@ -259,10 +260,8 @@
         </li>
       </ul>
       
-      <p class="max-w-5xl mx-auto text-lg"> you can walk through your kitchen, bedrooms, bathrooms, garage, 
-        every single inch of the home is accessible to you and all in 3D
-        This takes the guess work out as you experience your home to understand not only the size & scale of the build but also how you can 
-        visualise your interior design
+      <p class="max-w-5xl mx-auto text-lg"> Convert your floor plans to 3D using AR (Augmented Reality) and immerse yourself in your home.<br>
+        Visualise your interior and understand the size, scale and finish of the build as you walk through every inch of your house.
       </p>
     </div>
   </section>
