--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         <p class="text-2xl text-blue-400 md:text-4xl">Welcome To</p>
 
         <h1 class="mt-4 text-5xl font-bold text-white md:text-7xl">Precise Plans</h1>
-        <div class="mt-12">
+        <p class="text-xl text-blue-400 font-bold md:text-2xl my-8">Walk through your floor plan on a<br> 1:1 life size scale</p>
+
+        <div class="">
           <button @click="open = true"
             class="inline-flex items-center px-4 py-3 space-x-3 text-sm font-bold text-white transition bg-blue-400 rounded-md hover:bg-blue-500">
             <svg class="w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
@@ -160,16 +162,16 @@
       </p>
       <ul class="grid gap-8 md:grid-cols-3">
         <li>
-          <img src="/static/img/services/12.jpg" class="w-full rounded-md">
-          <h4 class="text-xl text-blue-500 uppercase my-7">Homeowners</h4>
-          <p>For clients refurbishing, extending or building from scratch, to provide the clarity and peace of mind they
-            desire!</p>
-        </li>
-        <li>
           <img src="/static/img/services/designer.jpeg" class="w-full rounded-md">
           <h4 class="text-xl text-blue-500 uppercase my-7">professional</h4>
           <p>For interior designers, architects, builders and developers to tangibly showcase and demonstrate their
             work!</p>
+        </li>
+        <li>
+          <img src="/static/img/services/12.jpg" class="w-full rounded-md">
+          <h4 class="text-xl text-blue-500 uppercase my-7">Homeowners</h4>
+          <p>For clients refurbishing, extending or building from scratch. We assist with every stage of the process, 
+            from drafting of plans, to architecture and design and through the construction process.</p>
         </li>
         <li>
           <img src="/static/img/services/commercial.jpeg" class="w-full rounded-md">
